fixed graphoverlap

--- a/css/main.css
+++ b/css/main.css
@@ -74,5 +74,5 @@ html, .container-fluid {
 
 body {
   height: 100%;
-  background-color:
+  background-color: skyblue;
 }
